--- a/src/MEGASync/gui/ui/ImportListWidgetItem.ui
+++ b/src/MEGASync/gui/ui/ImportListWidgetItem.ui
@@ -6,65 +6,64 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>445</width>
-    <height>34</height>
+    <width>522</width>
+    <height>36</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>445</width>
+    <width>0</width>
     <height>34</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
-    <height>34</height>
+    <height>36</height>
    </size>
   </property>
   <property name="windowTitle">
    <string/>
   </property>
   <property name="styleSheet">
-   <string notr="true">#lName
+   <string notr="true">#lImage, #lState, #cSelected
 {
-font-size: 12px;
-}
-
-#lImage
-{
-margin-left: 3px;
+border: none;
+background: transparent;
 }
 </string>
   </property>
+  <property name="TOKENIZED" stdset="0">
+   <bool>true</bool>
+  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="leftMargin">
-    <number>10</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
     <number>8</number>
    </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>28</number>
+   </property>
    <property name="bottomMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <item>
     <widget class="QCheckBox" name="cSelected">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="maximumSize">
       <size>
-       <width>18</width>
-       <height>18</height>
+       <width>16777215</width>
+       <height>16777215</height>
       </size>
      </property>
      <property name="styleSheet">
@@ -75,6 +74,12 @@ margin-left: 3px;
      </property>
      <property name="checked">
       <bool>true</bool>
+     </property>
+     <property name="type" stdset="0">
+      <string>mega</string>
+     </property>
+     <property name="state" stdset="0">
+      <string>default</string>
      </property>
     </widget>
    </item>
@@ -88,8 +93,14 @@ margin-left: 3px;
      </property>
      <property name="minimumSize">
       <size>
-       <width>0</width>
-       <height>28</height>
+       <width>24</width>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>24</width>
+       <height>24</height>
       </size>
      </property>
      <property name="styleSheet">
@@ -100,7 +111,7 @@ padding-left: 6px;</string>
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../Resources_common.qrc">
+      <iconset>
        <normaloff>:/images/small_text.png</normaloff>:/images/small_text.png</iconset>
      </property>
      <property name="iconSize">
@@ -117,27 +128,25 @@ padding-left: 6px;</string>
    <item>
     <widget class="QLabel" name="lName">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
-       <width>320</width>
+       <width>300</width>
        <height>28</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>320</width>
+       <width>300</width>
        <height>16777215</height>
       </size>
      </property>
      <property name="font">
-      <font>
-       <pointsize>-1</pointsize>
-      </font>
+      <font/>
      </property>
      <property name="focusPolicy">
       <enum>Qt::StrongFocus</enum>
@@ -156,7 +165,7 @@ padding-left: 6px;</string>
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeType">
-      <enum>QSizePolicy::Preferred</enum>
+      <enum>QSizePolicy::Expanding</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -170,14 +179,14 @@ padding-left: 6px;</string>
     <widget class="QPushButton" name="lState">
      <property name="minimumSize">
       <size>
-       <width>24</width>
-       <height>28</height>
+       <width>16</width>
+       <height>16</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>24</width>
-       <height>28</height>
+       <width>16</width>
+       <height>16</height>
       </size>
      </property>
      <property name="focusPolicy">
@@ -185,19 +194,20 @@ padding-left: 6px;</string>
      </property>
      <property name="styleSheet">
       <string notr="true">border: none;
-padding-right: -2px;</string>
+padding-right: -2px;
+</string>
      </property>
      <property name="text">
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../Resources_common.qrc">
-       <normaloff>:/images/import_ok_icon.png</normaloff>:/images/import_ok_icon.png</iconset>
+      <iconset>
+       <normaloff>../images/import_check.svg</normaloff>../images/import_check.svg</iconset>
      </property>
      <property name="iconSize">
       <size>
-       <width>24</width>
-       <height>24</height>
+       <width>16</width>
+       <height>16</height>
       </size>
      </property>
      <property name="flat">
@@ -212,8 +222,6 @@ padding-right: -2px;</string>
   <tabstop>lImage</tabstop>
   <tabstop>lName</tabstop>
  </tabstops>
- <resources>
-  <include location="../Resources_common.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
