--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -143,5 +143,8 @@
         <file alias="upload-to-mega.png">images/upload-to-mega.png</file>
         <file alias="upload-to-mega@2x.png">images/upload-to-mega@2x.png</file>
         <file alias="upload-to-mega@3x.png">images/upload-to-mega@3x.png</file>
+        <file alias="rotate-cw.svg">images/themed/light/rotate-cw.svg</file>
+        <file alias="arrow-down-brand-primary.svg">images/themed/light/arrow-down-brand-primary.svg</file>
+        <file alias="arrow-up-brand-primary.svg">images/themed/light/arrow-up-brand-primary.svg</file>
     </qresource>
 </RCC>
