Continue tokenizing transfers

--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -84,7 +84,7 @@
         <file alias="images/icons/tray/windows/open_links.svg">images/icons/tray/windows/open_links.svg</file>
         <file alias="images/icons/tray/macos/exit.svg">images/icons/tray/macos/exit.svg</file>
         <file alias="images/icons/tray/macos/settings.svg">images/icons/tray/macos/settings.svg</file>
-        <file alias="check-circle.svg">images/themed/dark/check-circle.svg</file>
+        <file alias="check-circle-indicator-green.svg">images/themed/dark/check-circle-indicator-green.svg</file>
         <file alias="pause.svg">images/themed/dark/pause.svg</file>
         <file alias="pause-circle.svg">images/themed/dark/pause-circle.svg</file>
         <file alias="play-circle.svg">images/themed/dark/play-circle.svg</file>
@@ -142,5 +142,8 @@
         <file alias="rotate-cw.svg">images/themed/dark/rotate-cw.svg</file>
         <file alias="arrow-down-brand-primary.svg">images/themed/dark/arrow-down-brand-primary.svg</file>
         <file alias="arrow-up-brand-primary.svg">images/themed/dark/arrow-up-brand-primary.svg</file>
+        <file alias="syncing-icon-secondary.svg">images/themed/dark/syncing-icon-secondary.svg</file>
+        <file alias="file-search-02.svg">images/themed/dark/file-search-02.svg</file>
+        <file alias="link-01.svg">images/themed/dark/link-01.svg</file>
     </qresource>
 </RCC>
