--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -122,5 +122,7 @@
         <file alias="images/qml/dialog_message_question.svg">images/qml/dialog_message_question.svg</file>
         <file alias="images/qml/dialog_message_warning.svg">images/qml/dialog_message_warning.svg</file>
         <file alias="images/qml/arrows-up-down-circle.svg">images/qml/arrows-up-down-circle.svg</file>
+        <file alias="images/qml/down-arrow.svg">images/qml/down-arrow.svg</file>
+        <file alias="images/qml/up-arrow.svg">images/qml/up-arrow.svg</file>
     </qresource>
 </RCC>
