--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -149,5 +149,21 @@
         <file alias="syncing-icon-secondary.svg">images/themed/light/syncing-icon-secondary.svg</file>
         <file alias="file-search-02.svg">images/themed/light/file-search-02.svg</file>
         <file alias="link-01.svg">images/themed/light/link-01.svg</file>
+        <file alias="mega-outline.svg">images/themed/light/mega-outline.svg</file>
+        <file alias="log-out.svg">images/themed/light/log-out.svg</file>
+        <file alias="folder-open.svg">images/themed/light/folder-open.svg</file>
+        <file alias="globe-01.svg">images/themed/light/globe-01.svg</file>
+        <file alias="sync-plus.svg">images/themed/light/sync-plus.svg</file>
+        <file alias="database-plus.svg">images/themed/light/database-plus.svg</file>
+        <file alias="link-01-primary.svg">images/themed/light/link-01-primary.svg</file>
+        <file alias="arrow-up-circle-primary.svg">images/themed/light/arrow-up-circle-primary.svg</file>
+        <file alias="arrow-down-circle-primary.svg">images/themed/light/arrow-down-circle-primary.svg</file>
+        <file alias="stream.svg">images/themed/light/stream.svg</file>
+        <file alias="gear-8.svg">images/themed/light/gear-8.svg</file>
+        <file alias="chevron-right-icon-secondary.svg">images/themed/light/chevron-right-icon-secondary.svg</file>
+        <file alias="folder.svg">images/themed/light/folder.svg</file>
+        <file alias="database.svg">images/themed/light/database.svg</file>
+        <file alias="sync-01.svg">images/themed/light/sync-01.svg</file>
+        <file alias="monitor.svg">images/themed/light/monitor.svg</file>
     </qresource>
 </RCC>
